# s3od

./: .gitignore  README.md  pyproject.toml  pytest.ini
synth_sod/: README.md  pyproject.toml
synth_sod/src/synth_sod/: __init__.py
synth_sod/src/synth_sod/data_generation/: feature_extraction.py  filter_dataset.py  filtering_config.yaml  generate_train_images.py  generation_config.yaml  imagenet_classes.json  mask_generator.py  pipeline.py  prompt_generator.py  resizer.py  run_filtering.py
synth_sod/src/synth_sod/data_generation/concept_attention/: __init__.py  flux_dit_block_with_concept_attention.py  flux_dit_with_concept_attention.py  flux_with_concept_attention_pipeline.py
synth_sod/src/synth_sod/data_generation/filters/: __init__.py  consistency_filter.py  vlm_filter.py
synth_sod/src/synth_sod/data_generation/flux_finetune/: flux_pipeline.py  generate_captions.py  requirements.txt  tag_data.py
synth_sod/src/synth_sod/model_training/: compute_metrics.py  dataset.py  generate_test_metadata.py  lightning_module.py  loss.py  metrics.py  mine_samples.py  model.py  predictor.py  test_efficiency.py  train.py  transforms.py
synth_sod/src/synth_sod/model_training/config/: train.yaml  train_teacher.yaml
synth_sod/src/synth_sod/model_training/config/backend/: 1gpu.yaml  2gpu.yaml  4gpu.yaml  8gpu.yaml  cpu.yaml
synth_sod/src/synth_sod/model_training/config/dataset/: dis.yaml  duts.yaml  full.yaml  hr.yaml  synth.yaml
synth_sod/src/synth_sod/model_training/config/loss/: bce_iou_ssim.yaml  focal_iou.yaml
synth_sod/src/synth_sod/model_training/dinov3_config/: preprocessor_config.json
(+14 files in other folders)
